prevented horizontal scrolling through reset CSS

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -16,6 +16,11 @@ body {
     height: 100%;
 }
 
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-size: 100%;
     font-weight: normal;
