--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,11 +313,6 @@ li {
 
 @media screen and (max-width: 950px) {
 
-    body {
-        max-width: 100%;
-        overflow-x: hidden;
-    }
-    
     #nav-list li {
         margin: 1rem 1rem;
     }
